--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: '0 2 * * *'      # 根据自己的需要设置何时重启
+    - cron: '0 0 ? * *'      # 根据自己的需要设置何时重启
 
 jobs:
   ibm-cloud-restart:
@@ -37,3 +37,4 @@ jobs:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
       run: |
         cf restart $IBM_APP_NAME
+      
